@@ -1,3 +1,8 @@
+2012-01-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* delete proof-full-annotation-internal (as Dave wished) (elisp only)
+	* fix strange start problem
+
 2011-12-31  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* protocol change: first fixed length line tells length
